--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 </head>
 <body>
+<div id="score-text">Score: </div>
 <div id="counter">0</div>
+
+<div id="highscore-text">High Score: </div>
+<div id="highscore"></div>
     
 <div id="controls">
   <div>
