--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="highscore-text">High Score: </div>
 <div id="highscore"></div>
     
-<div id="introduction">Hold down the mouse to stretch out a stick</div>
+<div id="introduction">Use the arrow keys to move the box.</div>
 
 <div id="end">
   <button id="retry">Retry</button>
